package com.example.bucketadapter.adapters;

import java.util.List;

public interface bucketadapter {
    void upload(String localSrc, String remoteSrc);
    void download(String localSrc, String remoteSrc);
    void delete(String remoteSrc, boolean recursive);
    List<String> list(String remoteSrc);
}
